--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cymem==2.0.7
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
 Flask==2.2.5
 Flask-ReCaptcha==0.4.2
+gunicorn==21.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
